--- a/3_Practice_Project_WineQuality.ipynb
+++ b/3_Practice_Project_WineQuality.ipynb
@@ -5265,7 +5265,7 @@
    "id": "d2b9a478",
    "metadata": {},
    "source": [
-    "The KNN model is not overfitting the accuracy is almost same"
+    "The Decision-Tree model is not overfitting the accuracy is almost same"
    ]
   },
   {
